# sentinel-ai

./: .gitignore  ACQUISITION_PITCH.md  CHANGELOG.md  Dockerfile  FOLLOWUP_EMAIL_DRAFT.md  LICENSE  NPM_SETUP.md  PYPI_SETUP.md  README.md  SECURITY.md  SHOW_HN_DRAFT.txt  action.yml  pyproject.toml
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
commands/: check-pii.md  red-team.md  scan-tool-call.md
docs/: index.html
examples/: agent_monitor.py  anthropic_integration.py  attack_chain.py  claude_agent_sdk_safety.py  claude_agent_sdk_safety.ts  claude_code_hook.py  claude_code_hook.ts  claudemd_enforcement.py  code_vulnerability_scan.py  compliance_report.py  conversation_safety.py  full_security_pipeline.yml  github_action_sarif.yml  guard_policy.yaml  langchain_guardrails.py  llamaindex_guardrails.py  mcp_safety_proxy.py  observability.py  policy_config.py  post_tool_code_review.py  quick_start.yml  quickstart.py  quickstart.ts  rsp_risk_report.py  safe_anthropic_client.py  safe_chatbot.py  sarif_output.py  sdk_guard_wrapper.py  sentinel-policy.yml  session_audit.py  streaming_guard.py  threat_intel.py  webhook_alerting.py
hooks/: log-event.sh  post-tool-scan.sh  pre-tool-scan.sh
mcpb/: manifest.json
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sentinel/: __init__.py  __main__.py  ab_tester.py  access_control.py  adversarial.py  adversarial_probe.py  agent_monitor.py  alert_manager.py  anomaly_detector.py  anthropic_wrapper.py  api.py  attack_chain.py  attack_surface.py  audit.py  audit_log.py  auth.py  badge.py  benchmarks.py  (+176 more)
(+244 files in other folders)
