[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-guardrails"
version = "0.45.0"
description = "Real-time AI safety guardrails: prompt injection detection, PII redaction, harmful content filtering, and hallucination scoring for LLM applications."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sentinel AI" }]
keywords = ["ai-safety", "llm", "guardrails", "prompt-injection", "pii-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "regex>=2023.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
ml = ["torch>=2.0", "transformers>=4.30"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[project.urls]
Homepage = "https://github.com/MaxwellCalkin/sentinel-ai"
Repository = "https://github.com/MaxwellCalkin/sentinel-ai"
Issues = "https://github.com/MaxwellCalkin/sentinel-ai/issues"
